# clang_deprecation_warning

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  clang_deprecation_warning.cpp  deprecation.hpp  pimpl_with_make_shared.cpp  pimpl_with_make_shared.hpp  pimpl_with_shared_ptr.cpp  pimpl_with_shared_ptr.hpp
